dovecot/dovecot-pigeonhole/tests/execute/errors/actions-limit.sieve
require "fileinto";

fileinto "box1";
fileinto "box2";
fileinto "box3";
fileinto "box4";
fileinto "box5";
fileinto "box6";
fileinto "box7";
fileinto "box8";
fileinto "box9";
fileinto "box10";
fileinto "box11";
fileinto "box12";
fileinto "box13";
fileinto "box14";
fileinto "box15";
fileinto "box16";
fileinto "box17";
fileinto "box18";
fileinto "box19";
fileinto "box20";
fileinto "box21";
fileinto "box22";
fileinto "box23";
fileinto "box24";
fileinto "box25";
fileinto "box26";
fileinto "box27";
fileinto "box28";
redirect "address1@example.com";
redirect "address2@example.com";
redirect "address3@example.com";
redirect "address4@example.com";
keep;
